Fix Dropdown style (set z-index for '.dropdown__list')

--- a/src/components/Layout/MainNav/SiteList/Dropdown.module.scss
+++ b/src/components/Layout/MainNav/SiteList/Dropdown.module.scss
@@ -162,6 +162,7 @@
 
   .dropdown__list {
     position: absolute;
+    z-index: 50;
     top: 100%;
     left: 0;
 
